1998-10-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in: Generate at configuration time a default boot
	server address in order to avoid multi-user conflicts.

1998-10-20  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: No need to clean isthrbio and friends anymore since 
	this program is no more built here.

	* configure.in: Do not create any file in the ${srcdir}. Fixes
	several VPATH-related bugs.
	Do not call isthrbio at build time (causes dependency problems).

1998-10-16  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add ada/stylesw.ad[bs] to the distribution.

1998-10-14  Laurent Pautet  <pautet@dorine.enst.fr>

	* MANIFEST: Add s-garpar.adb in source set.

1998-10-14  Laurent Pautet  <pautet@scapin.enst.fr>

	* MANIFEST: Add s-gargro.ads and s-gargro.adb in source set.

1998-10-12  Samuel Tardieu  <sam@inf.enst.fr>

	* support/ada.m4: Use AC_CHECK_PROGS when choosing between
	alternatives. Correct bug reported by Pascal Obry.

1998-10-10  Samuel Tardieu  <sam@inf.enst.fr>

	* NEWS: Remove old reference to 2.01 that is no longer justified.

1998-10-07  Samuel Tardieu  <sam@inf.enst.fr>

	* NEWS: Remove mention of Windows NT launch.

1998-10-06  Samuel Tardieu  <sam@inf.enst.fr>

	* NEWS: Mention Windows NT visible changes and bug fixes.

1998-10-05  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Substitute PSNAME so that it can be used by the
 	runtime.

1998-09-24  Samuel Tardieu  <sam@inf.enst.fr>

	* support/ada.m4: Detect gnatgcc as a suitable Ada driver since
	that is what the Debian distribution use.

1998-09-12  Laurent Pautet  <pautet@scapin.enst.fr>

        * configure.in, configure: Fix 5712-G01. Specific naming
	of a decalpha platform.
	
1998-09-02  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add missing Examples/Filters/Makefile.am.

1998-09-02  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in: To build isthriob, don't compile s-stratt.adb
 	anymore and bind with flag -t to ignore stamp inconsistency.