@@ -291,8 +291,8 @@ install-data-local: all-local install-dirs-local install-extra-libs
 	@if test ! -f inlining; then\
 	   exit 1;\
 	fi
-	${INSTALL}\
-	   `${srcdir}/../Dist/config.sdefault pathtolib`libgnat.a ${GARLIC}
+	${CP} `${srcdir}/../Dist/config.sdefault pathtolib`libgnat.a \
+	  ${GARLIC}/libgnat.a
 	${AR} d ${GARLIC}/libgnat.a s-stratt.o s-rpc.o s-parint.o
 	@if test `cat inlining` = "yes"; then\
 	   (cd gnatlib;\
