@@ -1,3 +1,13 @@
+1998-12-01  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* configure.in: Add support for i?86-*-mingw32* targets.
+
+1998-10-26  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* MANIFEST: Add Garlic/5bgtplsp.ads to the distribution.
+
+	* configure.in: Add support for AIX.
+
 1998-10-23  Laurent Pautet  <pautet@scapin.enst.fr>
 
 	* configure.in: Generate at configuration time a default boot
